CSS updated. Added Firebase

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,3 +72,7 @@ $firestarter-theme: mat.define-dark-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+a {
+  color: white;
+  text-decoration: none;
+}
